<resources>
    <string name="app_name">Learning is Fun!</string>
    <string name="next">Next</string>
    <string name="header">Header</string>
    <string name="content">Content</string>
    <string name="hi">Hi!</string>
    <string name="choose_a_game">Choose a game and start learning!</string>
    <string name="reading">Reading</string>
    <string name="drawing">Drawing</string>
    <string name="almost_like_scramble_game">Almost like scramble game</string>
    <string name="creating_a_picture">Creating a picture</string>
    <string name="onb_header_1">Children\'s educational games</string>
    <string name="onb_header_2">Drawing</string>
    <string name="onb_header_3">Reading</string>
    <string name="onb_content_1">\"Learning is fun!\" is an exciting and interactive game for kids, which is specially designed to develop the mental and creative abilities of your little one.</string>
    <string name="onb_content_2">Draw and develop fine motor skills</string>
    <string name="onb_content_3">Learn words and names of animals</string>
</resources>